# RTX-Path-Tracing

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  update_dependencies.bat
donut/: .gitignore  CMakeLists.txt  README.md  ThirdPartyLicenses.txt  compileshaders.cmake  donut-app.cmake  donut-core.cmake  donut-engine.cmake  donut-render.cmake  donut.natvis
donut/.github/workflows/: cla.yml
donut/include/donut/app/: ApplicationBase.h  Camera.h  DeviceManager.h  MediaFileSystem.h  Timer.h  UserInterfaceUtils.h  imgui_console.h  imgui_nvrhi.h  imgui_renderer.h
donut/include/donut/core/: circular_buffer.h  json.h  log.h  string_utils.h
donut/include/donut/engine/: AudioCache.h  AudioEngine.h  BindingCache.h  CommonRenderPasses.h  ConsoleInterpreter.h  ConsoleObjects.h  DDSFile.h  DescriptorTableManager.h  FramebufferFactory.h  GltfImporter.h  IesProfile.h  KeyframeAnimation.h  MaterialBindingCache.h  Scene.h  SceneGraph.h  SceneTypes.h  ShaderFactory.h  ShadowMap.h  TextureCache.h  View.h
donut/include/donut/render/: BloomPass.h  CascadedShadowMap.h  DeferredLightingPass.h  DepthPass.h  DrawStrategy.h  EnvironmentMapPass.h  ForwardShadingPass.h  GBuffer.h  GBufferFillPass.h  GeometryPasses.h  JointsRenderPass.h  LightProbeProcessingPass.h  MipMapGenPass.h  PixelReadbackPass.h  PlanarShadowMap.h  SkyPass.h  SsaoPass.h  TemporalAntiAliasingPass.h  ToneMappingPasses.h
donut/include/donut/shaders/: bindless.h  (+30 more)
donut/scripts/: lz4_tar.py  mat_to_gltf.py
donut/shaders/: CMakeLists.txt  DonutShaders.cfg  blit_ps.hlsl  fullscreen_vs.hlsl  ies_profile_cs.hlsl  imgui_pixel.hlsl  imgui_vertex.hlsl  rect_vs.hlsl  sharpen_ps.hlsl  skinning_cs.hlsl
donut/shaders/passes/: bloom_ps.hlsl  cubemap_gs.hlsl  deferred_lighting_cs.hlsl  depth_ps.hlsl  depth_vs.hlsl  environment_map_ps.hlsl  exposure_cs.hlsl  forward_ps.hlsl  forward_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  histogram_cs.hlsl  joints.hlsl  light_probe.hlsl  material_id_ps.hlsl  mipmapgen_cs.hlsl  motion_vectors_ps.hlsl  pixel_readback_cs.hlsl  sky_ps.hlsl  ssao_blur_cs.hlsl  ssao_compute_cs.hlsl  ssao_deinterleave_cs.hlsl  taa_cs.hlsl  tonemapping_ps.hlsl
donut/src/app/: ApplicationBase.cpp  Camera.cpp  DeviceManager.cpp  MediaFileSystem.cpp  UserInterfaceUtils.cpp  imgui_console.cpp  imgui_nvrhi.cpp  imgui_renderer.cpp
donut/src/core/: json.cpp  log.cpp  string_utils.cpp
donut/src/engine/: AudioCache.cpp  AudioEngine.cpp  BindingCache.cpp  CommonRenderPasses.cpp  ConsoleInterpreter.cpp  ConsoleObjects.cpp  DDSFile.cpp  DescriptorTableManager.cpp  FramebufferFactory.cpp  GltfImporter.cpp  IesProfile.cpp  KeyframeAnimation.cpp  Material.cpp  MaterialBindingCache.cpp  Scene.cpp  SceneGraph.cpp  SceneTypes.cpp  ShaderFactory.cpp  TextureCache.cpp  View.cpp  dds.h  stb_impl.c
donut/src/render/: BloomPass.cpp  CascadedShadowMap.cpp  DeferredLightingPass.cpp  DepthPass.cpp  DrawStrategy.cpp  EnvironmentMapPass.cpp  ForwardShadingPass.cpp  GBuffer.cpp  GBufferFillPass.cpp  GeometryPasses.cpp  JointsRenderPass.cpp  LightProbeProcessingPass.cpp  MipMapGenPass.cpp  PixelReadbackPass.cpp  PlanarShadowMap.cpp  SkyPass.cpp  SsaoPass.cpp  TemporalAntiAliasingPass.cpp  ToneMappingPasses.cpp
donut/tests/: CMakeLists.txt  test-core.cmake  test-engine.cmake
donut/tests/src/: utils.cpp
pt_sdk/: AccelerationStructureUtil.h  AccumulationPass.cpp  AccumulationPass.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  ComputePass.cpp  ComputePass.h  DonutBindings.hlsli  ExportVisibilityBuffer.hlsl  ExtendedScene.cpp  ExtendedScene.h  LocalConfig.cpp  LocalConfig.h  PathTracerBridgeDonut.hlsli  PathTracerBridgeNull.hlsli  PathTracerBridgeResources.hlsli  PostProcess.cpp  PostProcess.h  PostProcess.hlsl  RayTracingPass.cpp  RayTracingPass.h  RenderTargets.cpp  RenderTargets.h  Sample.cpp  Sample.h  Sample.hlsl  SampleCommon.h  SampleConstantBuffer.h  SampleNull.hlsl  SampleUI.cpp  SampleUI.h  ShaderResourceBindings.hlsli  shaders.cfg
pt_sdk/Lighting/Distant/: EnvMapImportanceSamplingBaker.h  EnvMapImportanceSamplingBaker.hlsl  SampleProceduralSky.h
pt_sdk/Lights/: EnvironmentMapImportanceSampling.cpp  EnvironmentMapImportanceSampling.h  EnvironmentMapImportanceSampling_cb.h
pt_sdk/NRD/: DenoiserNRD.hlsli  NrdConfig.cpp  NrdIntegration.cpp  NrdIntegration.h
pt_sdk/OpacityMicroMap/: OmmBuildQueue.cpp  OmmDebug.hlsli
pt_sdk/PathTracer/: Config.h  Config.hlsli  NoiseAndSequences.hlsli  PathPayload.hlsli  PathState.hlsli  PathTracer.hlsli  PathTracerBridge.hlsli  PathTracerHelpers.hlsli  PathTracerNEE.hlsli  PathTracerNestedDielectrics.hlsli  PathTracerParams.hlsli  PathTracerShared.h  PathTracerStablePlanes.hlsli  PathTracerTypes.hlsli  Sampling.hlsli  ShaderDebug.hlsli  StablePlanes.hlsli  StatelessSampleGenerators.hlsli  Utils.hlsli
pt_sdk/PathTracer/LightSampling/: LightSamplingLocal.hlsli
pt_sdk/PathTracer/Lighting/: Distant.hlsli  Types.h
pt_sdk/PathTracer/Scene/: HitInfo.hlsli  HitInfoType.hlsli  SceneDefines.hlsli  SceneTypes.hlsli  ShadingData.hlsli
pt_sdk/PathTracer/Utils/: HostDeviceShared.hlsli
pt_sdk/RTXDI/: DIFinalShading.hlsl  FinalSampling.hlsl  FusedDIGIFinalShading.hlsl  GIFinalShading.hlsl  GISpatialResampling.hlsl  GITemporalResampling.hlsl  GenerateInitialSamples.hlsl  GeneratePdfMipsPass.cpp  GeneratePdfMipsPass.h  HelperFunctions.hlsli  LightShaping.hlsli  PolymorphicLight.hlsli  PrepareLights.hlsl  PrepareLightsPass.cpp  PrepareLightsPass.h  PreprocessEnvironmentMap.hlsl  PresampleEnvironmentMap.hlsl  PresampleLights.hlsl  PresampleReGIR.hlsl  RtxdiApplicationBridge.hlsli  RtxdiApplicationSettings.cpp  RtxdiApplicationSettings.h  RtxdiPass.cpp  RtxdiPass.h  RtxdiResources.cpp  RtxdiResources.h  SceneGeometry.hlsli  SetSurfaceData.hlsli  ShaderParameters.h  SpatialResampling.hlsl  SpatioTemporalResampling.hlsl  SurfaceData.hlsli  TemporalResampling.hlsl
pt_sdk/Streamline/: SLWrapper.cpp  SLWrapper.h  secureLoadLibrary.cpp  secureLoadLibrary.h
pt_sdk/ToneMapper/: ToneMapperParams.hlsli  ToneMapping.hlsl  ToneMapping.ps.hlsli  ToneMappingPasses.h  ToneMapping_cb.h
(+161 files in other folders)
